tests/type-errors/06-cons-not-list.flt
// Cons tail must be list
// --- Command: dotnet run --project FunLang -- --emit-type --expr "1 :: 2" 2>&1
// --- ExitCode: 1
// --- Output:
error[E0301]: Type mismatch: expected int but got int list
 --> <expr>:1:0-6
   = hint: Check that all branches of your expression return the same type
